samples/_failures_safe/1761800856_503afa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02fed903.c: In function ‘main’:
./samples/SAFE/__tmp_02fed903.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
